Add logic for product detail page (check website listing, show/hide platform)